# Logic-sim

./: ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  Defs.H  README.md  graphics_prj.vcxproj  graphics_prj.vcxproj.filters  redo.cpp  redo.h  select_area.cpp  select_area.h  undo.cpp  undo.h
Actions/: AddAND2.cpp  AddAND3.cpp  AddAND3.h  AddBuffer.cpp  AddBuffer.h  AddINVERTER.cpp  AddINVERTER.h  AddLED.cpp  AddLED.h  AddNAND2.cpp  AddNAND2.h  AddNOR2.cpp  AddNOR2.h  AddNOR3.cpp  AddNOR3.h  AddNOT.cpp  AddOR2.cpp  AddOR2.h  AddSWITCH.cpp  AddSWITCH.h  AddXNOR2.cpp  AddXNOR2.h  AddXOR2.cpp  AddXOR2.h  AddXOR3.cpp  AddXOR3.h  Edit_label.cpp  Edit_label.h  Multi_select.cpp  Multi_select.h  Select.cpp  Select.h  Unselect.cpp  Unselect.h  switchtodesign.cpp  switchtosim.cpp  switchtosim.h  unselect_all.cpp
Components/: AND2.cpp  AND2.h  AND3.cpp  AND3.h  Buffer.cpp  Buffer.h  Component.cpp  Component.h  Connection.cpp  Gate.h  Inverter.cpp  Inverter.h  LED.cpp  LED.h  NAND2.cpp  NAND2.h  NOR2.cpp  NOR2.h  NOR3.cpp  NOR3.h  OR2.cpp  OR2.h  Switch.cpp  Switch.h  XNOR2.cpp  XNOR2.h  XOR2.cpp  XOR2.h  XOR3.cpp  XOR3.h
GUI/: Input.cpp  Input.h  Output.cpp  Output.h  UI_Info.h
